BIG-22760: Missed a table border color, and vertically aligning form actions to top to fix misalignment

--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -101,6 +101,7 @@
 
     .button {
         margin: 0 0 spacing("half");
+        vertical-align: top;
         width: 100%;
 
         @include breakpoint("small") {
