--- a/assets/scss/components/foundation/tables/_tables.scss
+++ b/assets/scss/components/foundation/tables/_tables.scss
@@ -85,7 +85,7 @@
     }
 
     tr {
-        border-color: color("greys", "lightest");
+        border-color: container("border");
 
         // scss-lint:disable SelectorDepth, NestingDepth
         td {
